argocd/prod/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-prisma
  namespace: prod
  labels:
    app: prisma
    tier: frontend
spec:
  replicas: 1
  selector:
    matchLabels:
      app: prisma
      tier: frontend
  template:
    metadata:
      name: frontend-prisma
      labels:
        app: prisma
        tier: frontend
    spec:
      containers:
        - name: frontend-prisma
          image: jensdl/frontend:dev.v22.12.08-12h16m
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          volumeMounts:
            - name: smb-prodfe
              mountPath: "/usr/share/nginx/html/assets"
              readOnly: false
      volumes:
        - name: smb-prodfe
          persistentVolumeClaim:
            claimName: pvc-smb-prodfe
