argocd/prod/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-prisma-service
  namespace: prod
  labels:
    app: prisma
    tier: frontend
  annotations:
        linkerd.io/inject: enabled
spec:
  ports:
  - protocol: TCP
    port: 4200
    targetPort: 80
  selector:
     app: prisma
     tier: frontend
