argocd/prod/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  namespace: prod
  annotations:
    kubernetes.io/ingress.class: "traefik"
    kubernetes.io/ingress.allow-http: "false"
    traefik.ingress.kubernetes.io/router.middlewares: prod-redirect-https@kubernetescrd
    ingress.kubernetes.io/auth-type: "basic"
    ingress.kubernetes.io/auth-secret: "basic-auth"
spec:
  rules:
  - host: prisma.orcraft.net
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend-prisma-service
            port:
              number: 4200
  tls:
  - hosts:
    - prisma.orcraft.net
    secretName: prod.prisma-tls
